fix(model): a deck settled by its seed and nothing else (#202)
A saved game is kept as a recipe — the seats, the rules, the seed, and every
command the game accepted — and put back by playing it through again. That only
works if the same seed deals the same cards. For level II games it did not.

DeckComposition built its counts in an EnumMap, which iterates in the order the
levels are declared, and then threw that order away on the last line with
Map.copyOf. The immutable maps shuffle their iteration order once per JVM, on
purpose. AdventureDeck.deal walked that map to fill each pile, so which cards
went into which pile depended on a coin toss taken when the process started.

Replaying one snapshot in four fresh JVMs dealt OPEN_SPACE, OPEN_SPACE, PLANETS,
OPEN_SPACE. The live game had dealt PLANETS. Restarting the server put a game
back only when the toss happened to land the same way; the rest of the time the
first recorded answer no longer fitted the question it was answering, and the
game was set aside as broken.

Keep the EnumMap, and walk CardLevel.values() when filling the piles, the way
the shuffle just above it already does.

The test flight was never affected: its deck is drawn from one level, so there
was only ever one order.

Nothing inside a single JVM could see any of this. The order is drawn once and
then held for the life of the process, so two decks dealt in the same test run
always agreed, and every determinism test in the suite dealt both of them in
the same run. The test added here asks a narrower question that one process can
answer: the levels must reach a pile in the order they are declared.